app/assets/v2/css/base.css
/* ... */
.why_gitcoin_cta {
  padding-bottom: 60px !important;
}

.bg-darkBlue a {
  color: #eee;
}
#feature_videos .video {
  text-align: center;
}
#feature_videos h6 {
  padding-top: 10px;
}

#origin_story .row .col p {
  margin-left: 20px;
  margin-right: 20px;
}

.advisor {
  float: left;
  height: 170px;
  width: 150px;
}

.advisor img {
  max-height: 100px;
  max-width: 100px;
}

p a {
  color: #212529;
  text-decoration: underline;
}

.modal a.close-modal {
  display: none !important;
}

.modal-close {
  float:right;
}

.iama {
  background: #0d023b;
  color: white;
  cursor: pointer;
  -moz-transition: background-color 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out;
  -ms-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
}

.iama a {
  color: white;
  font-weight: lighter;
}

.iama a.btn {
  color: #f9006c;
}

.iama a.btn:hover {
  color: white;
}

.iama .mt-3 {
  width: 40px;
  height: 40px;
  border-radius: 20px;
}

.iama:hover,
.iama.clicked {
  background: #3e24fb;
  color: #fff;
}

.iama:hover .mt-3,
.iama.clicked .mt-3 {
  width: 40px;
  height: 40px;
  border-radius: 20px;
}

.iama:first-child {
  border-right: 1px dotted #29eb98;
}

.iama:last-child {
  border-left: 1px dotted #29eb98;
}

.iama img {
  width: 30px;
  height: 30px;
  filter: invert(100%);
}

.btn-warning,
.btn-success,
.btn-info {
  padding: 0.4rem 1.4rem;
  font-size: 1.25rem;
  border: 2px solid #15003e;
  transition: none;
}

.btn-warning:hover,
.btn-success:hover,
.btn-info {
  cursor: pointer;
}

.btn-info:hover {
  background-color: #15003e;
  border-color: #15003e;
  color: #f9006c;
}

.btn-warning {
  color: #15003e;
}

.btn {
  cursor: pointer;
}

.btn-warning:hover {
  background-color: #15003e;
  border-color: #15003e;
  color: #ffce08;
}

.btn-success {
  color: #15003e;
}

.btn-success:hover {
  background-color: #15003e;
  border-color: #15003e;
  color: #25e899;
}

.btn:focus {
  box-shadow: none;
}

#hero_cta a.btn-warning {
  padding: 0.6rem 1.05rem;
  background-color: #ffce08;
  border-color: #ffce08;
  color: #15003e;
}

#hero_cta a.btn-warning:hover {
  background-color: #15003e;
  color: #ffce08;
}

#hero_cta a img {
  margin-top: -3px;
  height: 20px;
  width: 20px;
  margin-right: 5px;
}

.dashboard .body {
  padding-bottom: 50px;
}

.dashboard .body .row {
  margin-left: 0px;
}

.dashboard .special_tag a {
  max-height: 30px;
}

.dashboard .body .avatar {
  max-height: 50px;
  max-width: 50px;
}

.body .nonefound {
  margin-left: 100px;
  margin-top: 100px;
  text-align: center;
}

.dashboard .body .bounty_row.local,
.dashboard .body .bounty_row.ropsten {
  border-left: 1px solid red;
}

.dashboard .body .experience {
  border-radius: 6px;
  width: 12px;
  height: 12px;
  background: grey;
}

.dashboard .body .experience.beginner {
  background: #37ea9c;
}

.dashboard .body .experience.intermediate {
  background: #fecf32;
}

.dashboard .body .experience.advanced {
  background: #f9006c;
}

.dashboard .body .loading {
  text-align: center;
}

.loading_img img {
  max-width: 100px;
}

.dashboard .body .experienence.unknown {
  background: #eee;
}

#mailchimp {
  overflow: hidden;
}

#mailchimp div,
#mailchimp p,
#mailchimp h5 {
  z-index: 9;
}

#mailchimp p {
  margin-top: 0px;
  margin-bottom: 0px;
}

#mailchimp p.email {
  margin-bottom: 2rem;
}

body #mc_embed_signup {
  background: transparent !important;
}

body #mc_embed_signup label {
  font-weight: normal;
}

.form_container {
  text-align: left;
  background-color: white;
  border-radius: 2px;
  padding-top: 20px;
  padding-bottom: 20px;
  margin-bottom: 50px;
}

textarea.loading,
input[type=text].loading {
  background-image: url('/static/v2/images/loading_v2.gif');
  background-repeat: no-repeat;
  background-position: right;
  background-size: 30px;
}

.blocking_error {
  padding: 0 4em;
  text-align: center;
  margin: 100px auto;
  max-width: 100%;
}

.blocking_error img {
  max-width: 150px;
  filter: grayscale(80%);
  -moz-filter: grayscale(80%);
  -ms-filter: grayscale(80%);
  -o-filter: grayscale(80%);
}

#no_metamask_error img {
  filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  -o-filter: grayscale(100%);
}

#primary_form {
  max-width: 500px;
  margin: 0 auto;
  padding: 0 4em;
}

#primary_form img {
  max-width: 100px;
}

.bounty_nav {
  border-bottom: 2px solid #212529;
  padding: 0;
  display: flex;
  justify-content: space-around;
}

.bounty_nav li {
  display: inline;
  padding: 5px;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.bounty_nav li.active {
  background-color: #212529;
  color: white;
}

.submit_bounty #network_status div {
  display: inline;
}

#network_status div span {
  color: #4aeba8;
}

.submit_bounty select[name=deonomination] {
  text-align: left;
}

/* The alert message box */

.alert {
  align-items: center;
  background-color: #3E00FF;
  border-radius: 0px;
  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.24);
  color: white;
  display: flex;
  font-family: 'Muli', sans-serif;
  justify-content: space-between;
  padding: 20px;
  margin-bottom: 1px;
  position: fixed;
  top: 0px;
  width: 100%;
  z-index: 999999;
}

.alert .message {
  align-items: center;
  display: flex;
}

.alert .message::before {
  content: url('/static/v2/images/info.svg');
  margin-right: 10px;
}

.alert a {
  color: white;
  text-decoration: underline;
}

.alert.error {
  background-color: #C70018;
}

.alert.error .message::before {
  content: url('/static/v2/images/close.svg');
  height: 30px;
}

.alert.success {
  background-color: #00A652;
}

.alert.success .message::before {
  content: url('/static/v2/images/success.svg');
  height: 30px;
}

.alert.info {
  background-color: #008EFF;
}

.alert.info .message::before {
  content: url('/static/v2/images/info.svg');
  height: 30px;
}

.alert.warning {
  background-color: #F2A700
}
/* ... */

